Feature-BJS2-52587-Request-for-recommendation fix-v2